--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,22 +10,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.koen.snow.MainActivity">
 
-    <Button
-        android:text="@string/saved"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/button2" />
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:hint="@string/city"
         android:ems="10"
-        android:id="@+id/editText"
+        android:id="@+id/userinput"
         android:layout_centerVertical="true"
         android:layout_toLeftOf="@+id/button2"
         android:layout_alignParentLeft="true"
@@ -40,17 +31,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp" />
 
-    <Button
-        android:text="@string/search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button"
-        android:layout_alignTop="@+id/editText"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="35dp"
-        android:layout_marginEnd="35dp" />
-
     <TextView
         android:text="@string/title"
         android:textSize="30sp"
@@ -60,4 +40,24 @@
         android:id="@+id/textView5"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="@string/search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button"
+        android:layout_alignTop="@+id/userinput"
+        android:layout_toRightOf="@+id/textView5"
+        android:layout_toEndOf="@+id/textView5"
+        android:onClick="search"/>
+
+    <Button
+        android:text="@string/saved"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button2"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:onClick="seeSpots"/>
 </RelativeLayout>
