--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -8,7 +9,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.koen.snow.MainActivity">
+    tools:context="com.example.koen.snow.MainActivity"
+    android:background="@color/darkblue">
 
     <EditText
         android:layout_width="wrap_content"
@@ -18,9 +20,10 @@
         android:ems="10"
         android:id="@+id/userinput"
         android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/button2"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColorHint="@color/bluegrey"
+        android:textColor="@color/white"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -29,17 +32,20 @@
         android:id="@+id/textView"
         android:layout_above="@+id/button"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp" />
+        android:layout_marginBottom="10dp"
+        android:textColor="@color/white"
+        android:textSize="15sp"/>
 
     <TextView
         android:text="@string/title"
-        android:textSize="30sp"
+        android:textSize="35sp"
         android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView5"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/white"/>
 
     <Button
         android:text="@string/search"
@@ -47,9 +53,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/button"
         android:layout_alignTop="@+id/userinput"
-        android:layout_toRightOf="@+id/textView5"
         android:layout_toEndOf="@+id/textView5"
-        android:onClick="search"/>
+        android:onClick="search"
+        android:background="@drawable/buttonshape2"
+        android:textColor="@color/white"
+        android:layout_toRightOf="@+id/textView5" />
 
     <Button
         android:text="@string/saved"
@@ -59,5 +67,14 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:onClick="seeSpots"/>
+        android:onClick="seeSpots"
+        android:textColor="#FFFFFF"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:background="@drawable/buttonshape"
+        android:shadowColor="#4F90A8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="25"/>
+
 </RelativeLayout>
