--- a/app/src/main/res/layout/activity_sign_in_.xml
+++ b/app/src/main/res/layout/activity_sign_in_.xml
@@ -12,14 +12,19 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:orientation="vertical"
+        android:layout_centerHorizontal="true">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/status_textview"
             android:text=""/>
-        <com.google.android.gms.common.SigninButton
+        <com.google.android.gms.common.SignInButton
             android:id = "@+id/sign_in_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -29,8 +34,6 @@
             android:text="Sign Out"
             android:id="@+id/signOutButton"/>
     </LinearLayout>
-
-
 
 
 </RelativeLayout>
